--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.22.4"
   },
   "repository": {
     "type": "git",
