--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-validation-error": "^2.1.0"
   },
   "repository": {
     "type": "git",
