--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://YuriyPilipenkoKH.github.io/ts-basis/",
   "dependencies": {
     "@emotion/is-prop-valid": "^1.2.1",
+    "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +18,7 @@
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
@@ -26,6 +28,7 @@
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
+    "yup": "^1.3.2",
     "zod": "^3.22.4",
     "zod-validation-error": "^2.1.0"
   },
