--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.19.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
@@ -64,6 +64,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.0.0",
+    "tailwindcss": "^3.4.3"
   }
 }
