--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "antd": "^5.16.5",
     "axios": "^1.6.2",
     "clsx": "^2.1.1",
     "modern-normalize": "^2.0.0",
