--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.16.5",
     "axios": "^1.6.2",
     "clsx": "^2.1.1",
+    "json-server": "^1.0.0-alpha.23",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,7 +49,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve-json": "json-server --watch db.json --port 4000"
   },
   "eslintConfig": {
     "extends": [
